# walkscape-helper2

./: .gitignore  .linear.toml  .prettierignore  AGENTS.md  README.md  Taskfile.yml  eslint.config.mjs  example-character-export.json  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
.opencode/: gsd-file-manifest.json  opencode.json
.opencode/hooks/: gsd-check-update.js  gsd-statusline.js
.opencode/skills/walkscape-helper2/: SKILL.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: index.md
docs/.vitepress/: config.mts
docs/wiki/: sitemap.md
docs/wiki/activities/: antique-market-assessor.md  apprentice-for-loif.md  bodysurfing.md  bog-fishing-net.md  bog-fishing-spear.md  branch-trimming.md  brig-repair.md  butterfly-catching.md  cave-diving.md  classic-skiing.md  cleaning-the-holy-fountain.md  (+105 more)
ideas/: 001-remaining-content-from-wiki.md
reports/: scrape_report.json  skills_phase1_report.json  skills_phase2_report.json  skills_scrape_report.json  wiki_scrape_report.json
src/: cli-output.ts  extract.ts  main.ts
src/cli/: README.md  scrape-command.ts
src/mastra/: README.md  ai-usage.ts  ask.ts  guide-context.test.ts  guide-context.ts  guide.ts  index.ts  search.ts  skill-route-planner.ts  wiki-store.ts  wiki-workspace.ts  wiki.ts
src/scraper/: README.md  api.ts  collections.ts  extract.ts  index.ts  link-rewrite.ts  types.ts  utils.ts  writers.ts
src/walkscape_scraper/: __init__.py  api.py  extract.py  main.py
(+242 files in other folders)
