[project]
name = "walkscape-wiki-scraper"
version = "0.1.0"
description = "Phase 1 scraper for WalkScape Skills wiki page"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "markdownify>=0.13.1",
  "mkdocs-material>=9.6.4",
]

[project.scripts]
walkscape-scraper = "walkscape_scraper.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/walkscape_scraper"]
